<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_bottom_bg"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:context=".ui.contractor.fragment.ContractorLoginFragment">


    <!--<com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_bottom_line">-->

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/edittext_bottom_line"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/email_id"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress" />

    <!--</com.google.android.material.textfield.TextInputLayout>-->

    <!--<com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bottom_line"
        app:passwordToggleEnabled="true">-->

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/edittext_bottom_line"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />

    <!--</com.google.android.material.textfield.TextInputLayout>-->

    <Button
        android:id="@+id/btn_login"
        style="@style/text_12white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/squere_border_bg"
        android:text="@string/login" />


    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/signup"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>