<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/squere_border_white"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_80sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/change_password"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_old_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@null"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/old_password"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@null"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/new_pass"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <EditText
        android:id="@+id/et_Cpassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@null"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/confirm_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <Button
        android:id="@+id/btn_update_pass"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/squere_border_bg"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>
