<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/squere_border_white"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_80sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/add_degree_certification"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_degreeName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@null"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/degree_certification"
        android:imeOptions="actionNext"
        android:inputType="text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <EditText
        android:id="@+id/et_degreeYr"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@null"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/year_of_pass"
        android:imeOptions="actionGo"
        android:inputType="number" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <Button
        android:id="@+id/btn_submit_degree"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/squere_border_bg"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>
